# pyowm

./: .gitignore  pyproject.toml
pyowm/commons/: cityidregistry.py
