[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyowm"
version = "3.3.0"
description = "A Python wrapper around OpenWeatherMap web APIs"
authors = [
    { name = "Claudio Sparpaglione", email = "csparpa@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.20.0,<3",
    "geojson>=2.3.0,<3",
    "PySocks>=1.7.1,<2",
    "requests[socks]"
]
keywords = [
    "openweathermap", "web", "api", "client", "weather", "forecast", "uv", "alerting", "owm", "pollution", "meteostation", "agro", "agriculture"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
"*" = ["*.bz2", "*.md", "*.txt", "*.json"]
